boreal/tests/assets/invalid_files/compilation/unknown_variable6.yar
// [error: unknown variable $b]
rule a {
    condition:
        $b at 100
}
